--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -66,7 +66,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>springboot</finalName>
+		<finalName>springbootWEB</finalName>
 		<plugins>
 			<!-- Package as an executable jar/war -->
 			<plugin>
