Spring Boot and JSF PrimeFaces with Hibernate&JPA Web Project Sample

--- a/springbootjsf/src/main/resources/application.properties
+++ b/springbootjsf/src/main/resources/application.properties
@@ -1,2 +1,17 @@
 server.servlet.context-path = /springbootjsf
 server.port = 8088
+
+#jsf.primefaces.theme=cupertino
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/kdemo
+spring.datasource.username= postgres
+spring.datasource.password=	kdemo123
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
