Import PrimeFaces Theme

--- a/springbootjsf/src/main/resources/application.properties
+++ b/springbootjsf/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.context-path = /springbootjsf
 server.port = 8088
 
-#jsf.primefaces.theme=cupertino
+#server.context_parameters.primefaces.THEME=redmond
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/kdemo
