--- a/springbootjsf/pom.xml
+++ b/springbootjsf/pom.xml
@@ -33,6 +33,7 @@
 		<java.version>1.8</java.version>
 		<jsf.version>2.2.1</jsf.version>
 		<prime.version>6.1</prime.version>
+		<start-class>com.springbootjsf.springbootjsf.SpringbootjsfApplication</start-class>
 	</properties>
 
 	<dependencies>
@@ -80,9 +81,10 @@
 
 		<dependency>
 			<groupId>org.primefaces.themes</groupId>
-			<artifactId>cupertino</artifactId>
+			<artifactId>redmond</artifactId>
 			<version>1.0.10</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -102,6 +104,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.springbootjsf.springbootjsf.SpringbootjsfApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
