--- a/SOAP_REST_WS_Client/.project
+++ b/SOAP_REST_WS_Client/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SOAP_REST_WS</name>
+	<name>SOAP_REST_WS_Client</name>
 	<comment></comment>
 	<projects>
 	</projects>
