--- a/springbootjsf/src/main/resources/application.properties
+++ b/springbootjsf/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 server.servlet.context-path = /springbootjsf
 server.port = 8088
 
-#server.context_parameters.primefaces.THEME=redmond
 
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/kdemo
+spring.datasource.url=jdbc:postgresql://localhost:5432/dev_test
 spring.datasource.username= postgres
-spring.datasource.password=	kdemo123
+spring.datasource.password=	Passw0rd
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -15,3 +13,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.queries.users-query=select * from user where username=?
+spring.queries.roles-query=select u.username, r.role from user u inner join user_roles ur on(u.id=ur.user_role_id) where u.username=?
